z-index fixes for left-hand nav menus.
Also remove some apparently-unneeded z-indexes.

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -270,6 +270,7 @@ body.paper #p-header {
 	background: #dce4e8;
 	padding-bottom: 10px;
 	border-bottom: 1px solid #f33360;
+	z-index: 1;
 }
 #h-right {
 	padding: 6px 24px 0;
@@ -339,7 +340,6 @@ h1.paptitle {
 	position: relative;
 	top: 14px;
 	margin-bottom: 14px;
-	z-index: 1;
 	background: white;
 	border-top: 1px solid #f33360; /*#b2a584;*/
 	border-bottom: 1px solid #f33360; /*#b2a584;*/
@@ -3615,7 +3615,7 @@ a.badge-white:hover {
 .pspcard {
 	-webkit-position: sticky;
 	position: sticky;
-	z-index: 2;
+	z-index: 1;
 	background: #edf3f5;
 	color: #2b2b2b;
 	padding: 16px 20px 20px 24px;
@@ -3629,7 +3629,6 @@ a.badge-white:hover {
 .pslcard-nav {
 	-webkit-position: sticky;
 	position: sticky;
-	z-index: 1;
 	top: 104px; /* see also display_tracker */
 	margin: 20px 20px 0 24px;
 }
